--- a/config/api/services.yaml
+++ b/config/api/services.yaml
@@ -16,14 +16,15 @@ services:
         class: 'Hal\UI\API\Normalizer'
         calls:
             - ['addNormalizer', ['Hal\Core\Entity\Application', '@api_normalizer.application']]
-            - ['addNormalizer', ['Hal\Core\Entity\Build', '@api_normalizer.build']]
             - ['addNormalizer', ['Hal\Core\Entity\Target', '@api_normalizer.target']]
             - ['addNormalizer', ['Hal\Core\Entity\Environment', '@api_normalizer.environment']]
-            - ['addNormalizer', ['Hal\Core\Entity\JobEvent', '@api_normalizer.event']]
             - ['addNormalizer', ['Hal\Core\Entity\Organization', '@api_normalizer.organization']]
-            - ['addNormalizer', ['Hal\Core\Entity\Release', '@api_normalizer.release']]
-            - ['addNormalizer', ['Hal\Core\Entity\Group', '@api_normalizer.group']]
+            - ['addNormalizer', ['Hal\Core\Entity\JobType\Build', '@api_normalizer.build']]
+            - ['addNormalizer', ['Hal\Core\Entity\JobType\Release', '@api_normalizer.release']]
+            - ['addNormalizer', ['Hal\Core\Entity\Job\JobEvent', '@api_normalizer.event']]
+            # - ['addNormalizer', ['Hal\Core\Entity\Group', '@api_normalizer.group']]
             - ['addNormalizer', ['Hal\Core\Entity\User', '@api_normalizer.user']]
+            - ['addNormalizer', ['Hal\Core\Entity\System\VersionControlProvider', '@api_normalizer.vcs_provider']]
             - ['addNormalizer', ['QL\MCP\Common\Time\TimePoint', '@api_normalizer.timepoint']]
             - ['addNormalizer', ['Hal\UI\API\Hyperlink', '@api_normalizer.hyperlink']]
 
@@ -66,6 +67,9 @@ services:
     api_normalizer.user:
         class: 'Hal\UI\API\Normalizer\UserNormalizer'
         arguments: ['@service.authorization']
+
+    api_normalizer.vcs_provider:
+        class: 'Hal\UI\API\Normalizer\VersionControlProviderNormalizer'
 
     api_normalizer.hyperlink:
         class: 'Hal\UI\API\Normalizer\HyperlinkNormalizer'
