Fix Build, Target, and Template API endpoints

--- a/config/api/controllers.yaml
+++ b/config/api/controllers.yaml
@@ -71,19 +71,19 @@ services:
             - '@problem.renderer'
 
     ####################################################################################################################
-    # SERVER CONTROLLERS
+    # TEMPLATE CONTROLLERS
     ####################################################################################################################
 
-    groups.api:
-        class: 'Hal\UI\Controllers\API\Group\GroupsController'
+    templates.api:
+        class: 'Hal\UI\Controllers\API\Template\TemplatesController'
         arguments:
             - '@api.response_formatter'
             - '@doctrine.em'
             - '@problem.renderer'
 
-    group.api:
-        class: 'Hal\UI\Controllers\API\Group\GroupController'
-        arguments: ['@api.response_formatter', '@api_normalizer.group']
+    template.api:
+        class: 'Hal\UI\Controllers\API\Template\TemplateController'
+        arguments: ['@api.response_formatter', '@api_normalizer.template']
 
     ####################################################################################################################
     # TARGET CONTROLLERS
