--- a/config/api/routes.yaml
+++ b/config/api/routes.yaml
@@ -98,23 +98,23 @@ parameters:
                             stack: ['releases.api']
 
                 ########################################################################################################
-                # lolwut
+                # deployment target templates
                 ########################################################################################################
 
-                api.groups:
+                api.templates:
                     method: 'GET'
-                    route: '/groups'
-                    stack: ['groups.api']
+                    route: '/templates'
+                    stack: ['templates.api']
 
-                api.groups.paged:
+                api.templates.paged:
                     method: 'GET'
-                    route: '/groups/page/{page:%r.digit%}'
-                    stack: ['groups.api']
+                    route: '/templates/page/{page:%r.digit%}'
+                    stack: ['templates.api']
 
-                api.group:
+                api.template:
                     method: 'GET'
-                    route: '/groups/{group:%r.guid%}'
-                    stack: ['middleware.api_require_entity', 'group.api']
+                    route: '/templates/{template:%r.guid%}'
+                    stack: ['middleware.api_require_entity', 'template.api']
 
                 ########################################################################################################
                 # deployment targets
