Separate identity from user

--- a/config/ui/controllers.yaml
+++ b/config/ui/controllers.yaml
@@ -587,6 +587,7 @@ services:
             - '@validator.environment'
             - '@validator.vcs'
             - '@validator.idp'
+            - '@validator.identity'
             - '@validator.user'
             - '@uri'
     hal_bootstrap.twig:
