--- a/config/ui/routes.yaml
+++ b/config/ui/routes.yaml
@@ -44,6 +44,11 @@ parameters:
             route: '/signin-setup/{user:%r.guid%}/{setup_token:%r.guid%}'
             stack: ['middleware.require_entity', 'middleware.require_csrf', 'signin.setup.page']
 
+        signin.callback:
+            method: 'GET'
+            route: '/signin-callback'
+            stack: ['signin.callback.handler', 'signin.page']
+
         ################################################################################################################
         # help
         ################################################################################################################
