--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -25,6 +25,10 @@
         timeoutForSmallTests="2"
         verbose="true">
 
+    <listeners>
+        <listener class="Mockery\Adapter\Phpunit\TestListener"></listener>
+    </listeners>
+
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory>src</directory>
@@ -33,8 +37,9 @@
 
     <logging>
         <log type="junit" target=".phpunit/report/junit.xml" />
-        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
+        <log type="coverage-clover" target=".phpunit/clover.xml" />
         <log type="coverage-html" target=".phpunit/code-coverage" charset="UTF-8" highlight="true" lowUpperBound="50" highLowerBound="80" />
+        <log type="coverage-text" target="php://stdout" showUncoveredFiles="false"/>
     </logging>
 
     <php>
