--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -173,7 +173,7 @@ jobs:
                 name: 'Check test coverage threshold'
                 command: |
                     coverage_threshold=${MINIMUM_TEST_COVERAGE_PERCENT-50}
-                    bin/check-coverage ${coverage_threshold}
+                    bin/cicd/check-test-coverage ${coverage_threshold}
 
     static_analysis:
         <<: *defaults
