--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "guzzlehttp/psr7":          "~1.3",
         "guzzlehttp/guzzle":        "6.*",
         "knplabs/github-api":       "~2.4.0",
+        "neomerx/cors-psr7":        "~1.0",
         "php-http/guzzle6-adapter": "~1.1.0",
         "predis/predis":            "~1.0",
         "psr/log":                  "*",
